2007-01-16  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		buttons for printing and pdf export added.
		TODO: use menu.

	* src/de/intevation/printlayout/TypoUnits.java:
		mm2in() added.

	* src/de/intevation/printlayout/DocumentManager.java:
		- get paper size out of document
		- add pdf export and printing.

2007-01-15  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/PrintLayoutPlugin.java:
		forward plugin context to LayoutFrame

	* src/de/intevation/printlayout/MatrixTools.java:
		added. ease handling Java <-> SVG affine transform

	* src/de/intevation/printlayout/LayoutFrame.java:
		simple button to add the map content to the
		SVG document.

	* src/de/intevation/printlayout/DocumentManager.java:
		forward transform of map -> paper format.
		TODO: remove hard wired DIN A4 stuff

2007-01-15  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* etc/build.xml:
		enable debug tag in javac task
	
	* src/de/intevation/printlayout/LayoutCanvas.java:
		added. a special JSVGCanvas

	* src/de/intevation/printlayout/DocumentManager.java:
		added. Simplifies certain DOM task.

	* src/de/intevation/printlayout/LayoutManager.java:
		modified. uses LayoutCanvas and DocumentManager.

2007-01-12  Ludwig Reiter <ludwig.reiter@intevation.de>
	* etc/build.xml:
		a simple ant script.
	* etc/build.properties:
		project properties.

2007-01-12  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* etc/, etc/workbench-properties.xml:
		added to lauch OpenJump with plugin

	* resources/*:
		removed, wrong place

	* src/de/intevation/printlayout/resources/*:
		readded here

	* src/de/intevation/printlayout/LayoutFrame.java:
		added, simple JFrame for plugin.

	* src/de/intevation/printlayout/LayoutExtension.java:
		added, simple extension

	* src/de/intevation/printlayout/PrintLayoutPlugin.java:
		added, plugin interface to OpenJump

	* bin/run.sh:
		correction of plugin path
